# interio

./: .gitignore  Makefile  README.md  dev.sh
backend/: pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements.txt  test_gemini.py
backend/app/: main.py  models.py
backend/app/core/: config.py
backend/app/data/: materials_india.json
backend/app/services/: chat_service.py  explainability_service.py  geometry_service.py  material_service.py  model_service.py  ocr_service.py  opening_detector.py  plan_parser.py  pricing_service.py  project_store.py  report_service.py  stellar_service.py  weather_service.py
backend/app/utils/: geometry.py
backend/tests/: test_api.py  test_weather_service.py
contracts/: .gitignore
contracts/nft_contract/: Cargo.toml
contracts/nft_contract/src/: lib.rs
contracts/nft_contract/test_snapshots/test/: test_mint_and_read_metadata.1.json  test_mint_different_owners.1.json  test_mint_multiple_nfts.1.json  test_mint_same_id_overwrites.1.json
docs/: architecture.md
web/: jest.config.ts  package-lock.json  package.json  tsconfig.json
web/__tests__/: LocationPicker.test.tsx  format.test.ts
web/app/: Navigation.tsx  ProjectContext.tsx  globals.css  layout.tsx  page.tsx
web/app/chat/: page.tsx
web/app/model/: page.tsx
web/components/: ChatPanel.tsx  ElementInspector.tsx  FileUploader.tsx  LocationPicker.tsx  Model3DViewer.tsx  ModelControls.tsx  Plan2DViewer.tsx  PricingDashboard.tsx  ProjectSummary.tsx  RecommendationPanel.tsx  WalletConnect.tsx
web/lib/: api.ts  format.ts  mockData.ts  stellar.ts  types.ts
(+3 files in other folders)
