[package]
name = "nft_contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.2"

[dev_dependencies]
soroban-sdk = { version = "22.0.2", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true
